# zama-hackthon

./: .gitignore  README.md  deploy-server.sh  hardhat.config.ts  package-lock.json  package.json  plan  stop-server-demo.sh  tsconfig.json  zk-qualified-demo.sh
app/: globals.css  layout.tsx  page.tsx
app/api/zk/prove/: route.ts
app/config/: page.tsx
app/docs/: page.tsx
app/slides/: page.tsx
circuits/: QualifiedInvestor.circom  README.md
contracts/: ConfidentialUSDC.sol  ConfidentialYieldVault.sol  MockQualifiedInvestorRegistry.sol  MockUSDC.sol  YieldProductMarket.sol
contracts/interfaces/: IQualifiedInvestorRegistry.sol
contracts/zk/: Groth16QualifiedInvestorRegistry.sol  IQualifiedInvestorGroth16Verifier.sol
deploy/: 00_deploy_privyields.ts
deployments/sepolia/: ConfidentialUSDC.json  ConfidentialYieldVault.json  Groth16QualifiedInvestorRegistry.json  MockQualifiedInvestorRegistry.json  MockUSDC.json  QualifiedInvestorGroth16Verifier.json  YieldProductMarket.json
lib/: contracts.ts
public/: deployment-config.json
scripts/: check-sepolia-deploy-env.cjs  deploy-demo-video.sh  deploy-sepolia-production.sh  deploy-zama-hackathon.sh  local-smoke.ts  mint-demo-usdc.ts  server-local-demo.sh  stop-server-local-demo.sh  write-local-env.cjs
test/: groth16.registry.test.ts  privyields.market.test.ts
zk/qualified-investor/: Cargo.toml  README.md
zk/qualified-investor/src/: main.rs
