[package]
name = "privyields-qualified-investor"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-groth16 = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-serialize = "0.4"
ark-snark = "0.4"
ark-std = "0.4"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
num-bigint = "0.4"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
